[project]
name = "abertpy"
version = "0.3.1"
description = ""
authors = [{ name = "Valentin Kivachuk Burda", email = "vk18496@gmail.com" }]
license = { text = "GPL3" }
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pydantic>=2,<3",
    "typer>=0.20.0,<0.21.0",
    "pydantic-typer>=0.0.13,<0.0.14",
    "aiohttp>=3.13.1,<4.0.0",
    "loguru>=0.7.3,<0.8.0",
    "asyncstdlib>=3.13.1,<4.0.0",
    "backoff>=2.2.1,<3.0.0",
    "requests>=2.32.5,<3.0.0",
]

[project.scripts]
abertpy = "abertpy.args:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["abertpy"]

[tool.hatch.build.targets.sdist]
only-include = ["abertpy"]
